tests/negative/gold/incomplete_string7_test.gold
tests/negative/incomplete_string7_test.toit:6:3: error: Unterminated string
  """"
  ^
Compilation failed.
